--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nostr App Manager</title>
+
+    <script defer data-domain="nostrapp.link" src="https://plausible.io/js/script.js"></script>
+  
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
