--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Nostr Application Manager" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -33,7 +32,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <meta name="nometa_start"/>
     <title>Nostr App Manager</title>
+    <meta name="description" content="Nostr Application Manager" />
+    <meta name="nometa_end"/>
 
     <script defer data-domain="nostrapp.link" src="https://plausible.io/js/script.js"></script>
   
