--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,8 @@
 
     <script defer data-domain="nostrapp.link" src="https://plausible.io/js/script.js"></script>
   
+    <script src="https://www.unpkg.com/nostr-login@latest/dist/unpkg.js" data-perms="sign_event:31990,sign_event:31989,sign_event:5,sign_event:7,sign_event:1,sign_event:9734,sign_event:9735,sign_event:30117,sign_event:9042" data-dark-mode="false"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
